# Capstone_Projects

./: README.md  asset-manifest.json  index.html  precache-manifest.fa4945f0c757b7f568702c9e87aef193.js  service-worker.js
crop_decision/: .gitignore  README.md
crop_decision/backend/: .gitignore  requirements.txt
crop_decision/data_sources/: FAOSTAT_GHG.csv  FAOSTAT_crop_yield.csv  FAOSTAT_drained_soils.csv  FAOSTAT_fertilizers.csv  FAOSTAT_livestock_manure.csv  FAOSTAT_nutrient_budget.csv  FAOSTAT_pesticides.csv  kenya_climate_data_1991_2016.csv  kenya_rain_1901_2021.csv  kenya_temp_1901_2021.csv
crop_decision/frontend/: package-lock.json  package.json
farmer_weather/: .gitignore  Procfile  README.md  fly.toml  manage.py  pyproject.toml  requirements.txt
farmer_weather/farmer_weather/: asgi.py  settings.py  urls.py  wsgi.py
farmer_weather/get_weather/: apps.py  forms.py  models.py  urls.py  views.py
farmer_weather/get_weather/migrations/: 0001_initial.py
farmer_weather/get_weather/static/get_weather/: main.css
farmer_weather/get_weather/templates/get_weather/: base.html
farmer_weather/static/get_weather/: main.css
mkulima_project/: .gitignore  README.md  pyproject.toml  requirements.txt
mkulima_project/blog/: forms.py  models.py  views.py
mkulima_project/blog/templates/blog/: base.html
mkulima_project/mkulima_project/: settings.py
mkulima_project/users/: forms.py
mkulima_project/users/templates/users/: login.html
static/css/: main.c3e39018.chunk.css  (+1 more)
weather_prediction/: .gitignore  READme.md  package-lock.json
(+106 files in other folders)
