[tool.poetry]
name = "mkulima-project"
version = "0.1.0"
description = ""
authors = ["Stevedavies Wambui <44650523+SNWambui@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "mkulima_project"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
